--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -1,4 +1,7 @@
 \doxysection{File List}
-Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{functions-team-x_8h_source}{functions-\/team-\/x.\+h}} }{\pageref{functions-team-x_8h_source}}{}
+Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{\mbox{\hyperlink{doc__mainpage_8h}{doc\+\_\+mainpage.\+h}} }{\pageref{doc__mainpage_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{functions-team-x_8c}{functions-\/team-\/x.\+c}} }{\pageref{functions-team-x_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{functions-team-x_8h}{functions-\/team-\/x.\+h}} }{\pageref{functions-team-x_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{mainx_8c}{mainx.\+c}} }{\pageref{mainx_8c}}{}
 \end{DoxyCompactList}
