--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -206,10 +206,18 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
+\input{index}
 \chapter{File Index}
 \input{files}
 \chapter{File Documentation}
+\input{doc__mainpage_8h}
+\input{doc__mainpage_8h_source}
+\input{functions-team-x_8c}
+\input{functions-team-x_8c_source}
+\input{functions-team-x_8h}
 \input{functions-team-x_8h_source}
+\input{mainx_8c}
+\input{mainx_8c_source}
 %--- End generated contents ---
 % Index
   \backmatter
