--- a/docs/latex/functions-team-x_8h_source.tex
+++ b/docs/latex/functions-team-x_8h_source.tex
@@ -1,33 +1,57 @@
 \doxysection{functions-\/team-\/x.h}
-\hypertarget{functions-team-x_8h_source}{}\label{functions-team-x_8h_source}
+\hypertarget{functions-team-x_8h_source}{}\label{functions-team-x_8h_source}\mbox{\hyperlink{functions-team-x_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
-\DoxyCodeLine{00001\ }
-\DoxyCodeLine{00002\ \textcolor{preprocessor}{\#ifndef\ FUNCTIONS\_TEAM\_X\_H}}
-\DoxyCodeLine{00003\ \textcolor{preprocessor}{\#define\ FUNCTIONS\_TEAM\_X\_H}}
-\DoxyCodeLine{00004\ }
-\DoxyCodeLine{00005\ \textcolor{keywordtype}{void}\ menu();}
-\DoxyCodeLine{00006\ \textcolor{keywordtype}{void}\ escreverarray(\textcolor{keywordtype}{int}\ valores[]);}
-\DoxyCodeLine{00007\ \textcolor{keywordtype}{void}\ lerarray(\textcolor{keywordtype}{int}\ valores[]);}
-\DoxyCodeLine{00008\ \textcolor{keywordtype}{double}\ mediana(\textcolor{keywordtype}{int}\ valores[],\ \textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00009\ \textcolor{keywordtype}{void}\ ordenar(\textcolor{keywordtype}{int}\ valores[],\ \textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00010\ \textcolor{keywordtype}{void}\ divisiveis3(\textcolor{keywordtype}{int}\ valores[],\textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00011\ \textcolor{keywordtype}{void}\ mistura(\textcolor{keywordtype}{int}\ v[],\textcolor{keywordtype}{int}\ valores[],\textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00012\ \textcolor{keywordtype}{void}\ matriz18x18(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ valores[18],\textcolor{keywordtype}{int}\ matriz[18][18]);}
-\DoxyCodeLine{00013\ \textcolor{keywordtype}{void}\ mostrarmatriz(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ matriz[18][18]);}
-\DoxyCodeLine{00014\ \textcolor{keywordtype}{void}\ ordenarPrimeiraMetade(\textcolor{keywordtype}{int}\ vetor[],\textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00015\ \textcolor{keywordtype}{void}\ somaMetades(\textcolor{keywordtype}{int}\ vetor[],\ \textcolor{keywordtype}{int}\ tamanho,\ \textcolor{keywordtype}{int}\ resultado[]);}
-\DoxyCodeLine{00016\ \textcolor{keywordtype}{void}\ mostrarVetor(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ v[],\ \textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00017\ \textcolor{keywordtype}{void}\ somaMetades(\textcolor{keywordtype}{int}\ vetor[],\ \textcolor{keywordtype}{int}\ tamanho,\ \textcolor{keywordtype}{int}\ resultado[]);}
-\DoxyCodeLine{00018\ \textcolor{keywordtype}{void}\ mostrarVetormetades(\textcolor{keywordtype}{int}\ vetor[],\ \textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00019\ \textcolor{keywordtype}{void}\ raizquadrada(\textcolor{keywordtype}{int}\ valores[],\textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00020\ \textcolor{keywordtype}{void}\ numerosprimos(\textcolor{keywordtype}{int}\ valores[],\textcolor{keywordtype}{int}\ tamanho);}
-\DoxyCodeLine{00021\ \textcolor{keywordtype}{int}\ primo(\textcolor{keywordtype}{int}\ n);}
-\DoxyCodeLine{00022\ \textcolor{keywordtype}{void}\ calcularMatriz(\textcolor{keywordtype}{int}\ v1[],\ \textcolor{keywordtype}{int}\ v2[],\ \textcolor{keywordtype}{int}\ matriz[18][18]);}
-\DoxyCodeLine{00023\ \textcolor{keywordtype}{void}\ mostrarMatriz(\textcolor{keywordtype}{int}\ matriz[18][18]);}
-\DoxyCodeLine{00024\ \textcolor{keywordtype}{void}\ transporMatriz(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ M[18][18],\ \textcolor{keywordtype}{int}\ MT[18][18]);}
-\DoxyCodeLine{00025\ \textcolor{keywordtype}{void}\ mostrarMatrizT(\textcolor{keywordtype}{int}\ MT[18][18]);}
-\DoxyCodeLine{00026\ \textcolor{keywordtype}{void}\ mostrarAjuda(\textcolor{keywordtype}{void});}
-\DoxyCodeLine{00027\ }
-\DoxyCodeLine{00028\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00001}00001\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00002}00002\ \textcolor{preprocessor}{\#ifndef\ FUNCTIONS\_TEAM\_X\_H}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00003}00003\ \textcolor{preprocessor}{\#define\ FUNCTIONS\_TEAM\_X\_H}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00004}00004\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00005}00005\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00010}00010\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_ad16e5e62f3579a7048e6b981b172885e}{menu}}(\textcolor{keywordtype}{void});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00011}00011\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00017}00017\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a8b1c9008279081829dfd3b52fa0b6f5e}{escreverarray}}(\textcolor{keywordtype}{int}\ valores[]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00018}00018\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00024}00024\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a6c5a925b702e4d7175cce10b725fd700}{lerarray}}(\textcolor{keywordtype}{int}\ valores[]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00025}00025\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00032}00032\ \textcolor{keywordtype}{double}\ \mbox{\hyperlink{functions-team-x_8h_ae9ab2886d06dbcd932e3bc2ecb7dd795}{mediana}}(\textcolor{keywordtype}{int}\ valores[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00033}00033\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00039}00039\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a937c5cb05e4d969e82b24da2ddbacbae}{ordenar}}(\textcolor{keywordtype}{int}\ valores[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00040}00040\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00046}00046\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a908659e9d889fc3131248edffacee55c}{divisiveis3}}(\textcolor{keywordtype}{int}\ valores[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00047}00047\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00054}00054\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a6ca3c245f434925e73a467fef52b981e}{mistura}}(\textcolor{keywordtype}{int}\ v[],\ \textcolor{keywordtype}{int}\ valores[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00055}00055\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00061}00061\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_aa55af4f5f5d115cb6278eab21c796840}{matriz18x18}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ valores[18],\ \textcolor{keywordtype}{int}\ matriz[18][18]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00062}00062\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00067}00067\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a535cc6b9faa0beffb13b1c0227e06084}{mostrarmatriz}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ matriz[18][18]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00068}00068\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00075}00075\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a8a0d248817c1ba4420a62876bdd52059}{ordenarPrimeiraMetade}}(\textcolor{keywordtype}{int}\ vetor[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00076}00076\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00084}00084\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_aff75c8bff265cd8f99ae45529010edf7}{somaMetades}}(\textcolor{keywordtype}{int}\ vetor[],\ \textcolor{keywordtype}{int}\ tamanho,\ \textcolor{keywordtype}{int}\ resultado[]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00085}00085\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00091}00091\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a7d7f3319db72910682d9fe1f50f1d9c1}{mostrarVetor}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ v[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00092}00092\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00098}00098\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_adc086a9e9bd9a3639bd3504640a0cf70}{mostrarVetormetades}}(\textcolor{keywordtype}{int}\ vetor[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00099}00099\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00105}00105\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a8015a4241a5890f6730fa993f94c6e1b}{raizquadrada}}(\textcolor{keywordtype}{int}\ valores[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00106}00106\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00112}00112\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_afd74097e1aafd298fe3eb035be56e802}{numerosprimos}}(\textcolor{keywordtype}{int}\ valores[],\ \textcolor{keywordtype}{int}\ tamanho);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00113}00113\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00119}00119\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{functions-team-x_8h_a30d47071b258cfef99f4bd7ab1caad2a}{primo}}(\textcolor{keywordtype}{int}\ n);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00120}00120\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00127}00127\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_ada34b90ada110321b2ca66643ffc528e}{calcularMatriz}}(\textcolor{keywordtype}{int}\ v1[],\ \textcolor{keywordtype}{int}\ v2[],\ \textcolor{keywordtype}{int}\ matriz[18][18]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00128}00128\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00133}00133\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a7fba3d1ad089de730311925c9c132049}{mostrarMatriz}}(\textcolor{keywordtype}{int}\ matriz[18][18]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00134}00134\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00141}00141\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_ad671d69bda006e5d8d4af1b3f3d5157a}{transporMatriz}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ M[18][18],\ \textcolor{keywordtype}{int}\ MT[18][18]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00142}00142\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00147}00147\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_a477f749314c6f4e3208a4ecf5a26917d}{mostrarMatrizT}}(\textcolor{keywordtype}{int}\ MT[18][18]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00148}00148\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00152}00152\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8h_ae7bb133e62112c9458870d235531045b}{mostrarAjuda}}(\textcolor{keywordtype}{void});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00153}00153\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00154}00154\ \textcolor{preprocessor}{\#ifdef\ \_\_cplusplus}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00155}00155\ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00156}00156\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00157}00157\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8h_source_l00158}00158\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ FUNCTIONS\_TEAM\_X\_H\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
