--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -1,7 +1,7 @@
 \chapter{Trabalho de Laboratorio de Programacao -\/ Grupo 5(PL4)}
 \hypertarget{index}{}\label{index}\index{Trabalho de Laboratorio de Programacao -\/ Grupo 5(PL4)@{Trabalho de Laboratorio de Programacao -\/ Grupo 5(PL4)}}
 \hypertarget{index_intro}{}\doxysection{\texorpdfstring{Introdução}{Introdução}}\label{index_intro}
-O objetivo deste trabalho é desenvolver um programa capaz de pedir ao utilizador 18 números inteiros, dentro do intervalo entre –1 e 18, e guardá-\/ los num vetor. Depois de inseridos e validados os valores, o programa apre-\/ senta um menu através do qual o utilizador pode realizar várias operações. Entre estas operações incluem-\/se\+: a construção de uma matriz 18×18, onde a primeira linha corresponde ao vetor introduzido e as restantes resultam de permutações dos seus elementos; o cálculo da raiz quadrada de todos os va-\/ lores do vetor; a devolução do vetor com a primeira metade ordenada por ordem crescente; o cálculo da soma entre os elementos da primeira metade e da segunda metade; a determinação da mediana; e a apresentação apenas dos valores que não são divisíveis por três. Para além do objetivo principal, o projeto inclui também uma versão mais elaborada, com funcionalidades adicionais que devem ser integradas no menu. Entre elas está a leitura de um novo vetor e a criação de um vetor misto com-\/ posto por metade do vetor original e metade do vetor recém-\/lido; a decompo-\/ sição dos valores do vetor inicial em números primos; a geração de um vetor aleatório 1×18 e o cálculo da matriz 18×18 resultante do produto entre esse vetor e o vetor inicial; e ainda o cálculo da matriz transposta obtida a partir desse produto. Para ajudar o utilizador, o programa inclui também uma pá-\/ gina de ajuda acessível através da opção 7 do menu, bem como instruções adicionais quando é executado pela linha de comandos usando a flag.\hypertarget{index_features}{}\doxysection{\texorpdfstring{Funcionalidades}{Funcionalidades}}\label{index_features}
+O presente trabalho tem como objetivo desenvolver um programa em linguagem C capaz de criar e manipular vetores de números inteiros. O sistema permite ao utilizador realizar diversas operações, como ordenação, cálculo da soma e média dos elementos, bem como operações entre dois vetores distintos. Para facilitar a interação, o programa disponibiliza um menu intuitivo que orienta o utilizador na execução das funcionalidades. Além das operações básicas, o projeto foi concebido com uma estrutura modular, garantindo organização e facilidade de manutenção do código. Esta abordagem contribui para a clareza e eficiência do programa, permitindo futuras expansões e melhorias. O trabalho visa consolidar os conhecimentos adquiridos na disciplina, aplicando conceitos fundamentais de programação estruturada e boas práticas de desenvolvimento.\hypertarget{index_features}{}\doxysection{\texorpdfstring{Funcionalidades}{Funcionalidades}}\label{index_features}
 
 \begin{DoxyItemize}
 \item Leitura e escrita de vetores
