--- a/docs/latex/functions-team-x_8c_source.tex
+++ b/docs/latex/functions-team-x_8c_source.tex
@@ -179,92 +179,91 @@
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00176}00176\ \ \ \ \ \textcolor{keywordflow}{if}\ (valores[i]\ <\ 0)}
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00177}00177\ \ \ \ \ \{}
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00178}00178\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (valores[i]\ ==\ -\/1)\{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00179}00179\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}Raiz\ quadrada\ de\ um\ -\/1:\ numero\ complexo\ (i)\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00180}00180\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00181}00181\ \ \ \ \ \ \ \ \ \}\textcolor{keywordflow}{else}\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00182}00182\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}Nao\ ha\ raiz\ quadrada\ real\ (numero\ negativo)"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00183}00183\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00184}00184\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00185}00185\ \ \ \ \ \textcolor{keywordflow}{else}\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00186}00186\ \ \ \ \ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00187}00187\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{double}\ raiz\ =\ sqrt((\textcolor{keywordtype}{double})valores[i]);}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00188}00188\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}Raiz\ quadrada:\ \%.4f\(\backslash\)n"{}},\ raiz);}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00189}00189\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00179}00179\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}Raiz\ quadrada\ de\ um\ -\/1:\ numero\ complexo\ (i)\(\backslash\)n"{}});\}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00180}00180\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{else}\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00181}00181\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}Nao\ ha\ raiz\ quadrada\ real\ (numero\ negativo)"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00182}00182\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00183}00183\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00184}00184\ \ \ \ \ \textcolor{keywordflow}{else}\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00185}00185\ \ \ \ \ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00186}00186\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{double}\ raiz\ =\ sqrt((\textcolor{keywordtype}{double})valores[i]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00187}00187\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}Raiz\ quadrada:\ \%.4f\(\backslash\)n"{}},\ raiz);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00188}00188\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00189}00189\ \}}
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00190}00190\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00191}00191\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00192}00192\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00193}\mbox{\hyperlink{functions-team-x_8c_a30d47071b258cfef99f4bd7ab1caad2a}{00193}}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{functions-team-x_8c_a30d47071b258cfef99f4bd7ab1caad2a}{primo}}(\textcolor{keywordtype}{int}\ n)\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00194}00194\ \ \ \ \ \textcolor{keywordflow}{if}\ (n\ <\ 2)\ \textcolor{keywordflow}{return}\ 0;}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00195}00195\ \ \ \ \ \textcolor{keywordflow}{if}\ (n\ ==\ 2)\ \textcolor{keywordflow}{return}\ 1;}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00196}00196\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ d\ =\ 2;\ d\ <\ n;\ d++)\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00197}00197\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (n\ \%\ d\ ==\ 0)\ \textcolor{keywordflow}{return}\ 0;}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00198}00198\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00199}00199\ \ \ \ \ \textcolor{keywordflow}{return}\ 1;}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00200}00200\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00201}00201\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00202}\mbox{\hyperlink{functions-team-x_8c_afd74097e1aafd298fe3eb035be56e802}{00202}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_afd74097e1aafd298fe3eb035be56e802}{numerosprimos}}(\textcolor{keywordtype}{int}\ valores[],\textcolor{keywordtype}{int}\ tamanho)}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00203}00203\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00204}00204\ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ tamanho;\ i++)\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00205}00205\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ n\ =\ valores[i];}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00206}00206\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (\mbox{\hyperlink{functions-team-x_8c_a30d47071b258cfef99f4bd7ab1caad2a}{primo}}(n))\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00207}00207\ \ \ \ \ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\%d\ \(\backslash\)n"{}},\ n);}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00208}00208\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00191}00191\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00192}\mbox{\hyperlink{functions-team-x_8c_a30d47071b258cfef99f4bd7ab1caad2a}{00192}}\ \textcolor{keywordtype}{int}\ \mbox{\hyperlink{functions-team-x_8c_a30d47071b258cfef99f4bd7ab1caad2a}{primo}}(\textcolor{keywordtype}{int}\ n)\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00193}00193\ \ \ \ \ \textcolor{keywordflow}{if}\ (n\ <\ 2)\ \textcolor{keywordflow}{return}\ 0;}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00194}00194\ \ \ \ \ \textcolor{keywordflow}{if}\ (n\ ==\ 2)\ \textcolor{keywordflow}{return}\ 1;}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00195}00195\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ d\ =\ 2;\ d\ <\ n;\ d++)\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00196}00196\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (n\ \%\ d\ ==\ 0)\ \textcolor{keywordflow}{return}\ 0;}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00197}00197\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00198}00198\ \ \ \ \ \textcolor{keywordflow}{return}\ 1;}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00199}00199\ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00200}00200\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00201}\mbox{\hyperlink{functions-team-x_8c_afd74097e1aafd298fe3eb035be56e802}{00201}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_afd74097e1aafd298fe3eb035be56e802}{numerosprimos}}(\textcolor{keywordtype}{int}\ valores[],\textcolor{keywordtype}{int}\ tamanho)}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00202}00202\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00203}00203\ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ tamanho;\ i++)\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00204}00204\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{int}\ n\ =\ valores[i];}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00205}00205\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (\mbox{\hyperlink{functions-team-x_8c_a30d47071b258cfef99f4bd7ab1caad2a}{primo}}(n))\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00206}00206\ \ \ \ \ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\%d\ \(\backslash\)n"{}},\ n);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00207}00207\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00208}00208\ \}}
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00209}00209\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00210}00210\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00211}\mbox{\hyperlink{functions-team-x_8c_ada34b90ada110321b2ca66643ffc528e}{00211}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_ada34b90ada110321b2ca66643ffc528e}{calcularMatriz}}(\textcolor{keywordtype}{int}\ v1[],\ \textcolor{keywordtype}{int}\ v2[],\ \textcolor{keywordtype}{int}\ matriz[18][18])\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00212}00212\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00213}00213\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ 18;\ i++)\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00214}00214\ \ \ \ \ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00215}00215\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ j\ =\ 0;\ j\ <\ 18;\ j++)\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00216}00216\ \ \ \ \ \ \ \ \ \ \ \ \ matriz[i][j]\ =\ v1[i]\ *\ v2[j];}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00217}00217\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00218}00218\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00219}00219\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00220}00220\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00221}00221\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00222}\mbox{\hyperlink{functions-team-x_8c_a7fba3d1ad089de730311925c9c132049}{00222}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_a7fba3d1ad089de730311925c9c132049}{mostrarMatriz}}(\textcolor{keywordtype}{int}\ matriz[18][18])\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00223}00223\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Matriz\ \%dx\%d:\(\backslash\)n"{}},\ 18,\ 18);}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00224}00224\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ 18;\ i++)\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00225}00225\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ j\ =\ 0;\ j\ <\ 18;\ j++)\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00226}00226\ \ \ \ \ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\%4d\ "{}},\ matriz[i][j]);}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00227}00227\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00228}00228\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00229}00229\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00230}00230\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00231}\mbox{\hyperlink{functions-team-x_8c_ad671d69bda006e5d8d4af1b3f3d5157a}{00231}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_ad671d69bda006e5d8d4af1b3f3d5157a}{transporMatriz}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ M[18][18],\ \textcolor{keywordtype}{int}\ MT[18][18])\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00232}00232\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00233}00233\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ 18;\ i++)\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00234}00234\ \ \ \ \ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00235}00235\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ j\ =\ 0;\ j\ <\ 18;\ j++)\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00236}00236\ \ \ \ \ \ \ \ \ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00237}00237\ \ \ \ \ \ \ \ \ \ \ \ \ MT[i][j]\ =\ M[j][i];}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00238}00238\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00239}00239\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00240}00240\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00241}00241\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00242}\mbox{\hyperlink{functions-team-x_8c_a477f749314c6f4e3208a4ecf5a26917d}{00242}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_a477f749314c6f4e3208a4ecf5a26917d}{mostrarMatrizT}}(\textcolor{keywordtype}{int}\ MT[18][18])\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00243}00243\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ 18;\ i++)\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00244}00244\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ j\ =\ 0;\ j\ <\ 18;\ j++)\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00245}00245\ \ \ \ \ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\%3d\ "{}},\ MT[i][j]);}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00246}00246\ \ \ \ \ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00247}00247\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00248}00248\ \ \ \ \ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00249}00249\ \}}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00250}00250\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00251}\mbox{\hyperlink{functions-team-x_8c_ae7bb133e62112c9458870d235531045b}{00251}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_ae7bb133e62112c9458870d235531045b}{mostrarAjuda}}(\textcolor{keywordtype}{void})\ \{}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00252}00252\ \ \ \ \ printf(\textcolor{stringliteral}{"{}===\ AJUDA\ ===\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00253}00253\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Este\ programa\ trabalha\ com\ um\ vetor\ de\ \%d\ numeros\ inteiros\ (-\/1\ a\ 18).\(\backslash\)n\(\backslash\)n"{}},\ 18);}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00254}00254\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Regras:\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00255}00255\ \ \ \ \ printf(\textcolor{stringliteral}{"{}-\/\ Introduza\ \%d\ valores\ entre\ -\/1\ e\ 18\ (validacao\ obrigatoria).\(\backslash\)n"{}},\ 18);}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00256}00256\ \ \ \ \ printf(\textcolor{stringliteral}{"{}-\/\ Depois\ escolha\ uma\ opcao\ do\ menu\ para\ executar\ uma\ funcionalidade.\(\backslash\)n\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00257}00257\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Exemplo:\ na\ opcao\ 2,\ o\ programa\ calcula\ a\ raiz\ quadrada\ de\ cada\ valor\ do\ vetor.\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00258}00258\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Nota:\ entradas\ fora\ do\ intervalo\ [-\/1,\ 18]\ serao\ rejeitadas\ e\ pedidas\ novamente.\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00259}00259\ \ \ \ \ printf(\textcolor{stringliteral}{"{}================\(\backslash\)n\(\backslash\)n"{}});}
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00260}00260\ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00210}\mbox{\hyperlink{functions-team-x_8c_ada34b90ada110321b2ca66643ffc528e}{00210}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_ada34b90ada110321b2ca66643ffc528e}{calcularMatriz}}(\textcolor{keywordtype}{int}\ v1[],\ \textcolor{keywordtype}{int}\ v2[],\ \textcolor{keywordtype}{int}\ matriz[18][18])\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00211}00211\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00212}00212\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ 18;\ i++)\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00213}00213\ \ \ \ \ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00214}00214\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ j\ =\ 0;\ j\ <\ 18;\ j++)\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00215}00215\ \ \ \ \ \ \ \ \ \ \ \ \ matriz[i][j]\ =\ v1[i]\ *\ v2[j];}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00216}00216\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00217}00217\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00218}00218\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00219}00219\ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00220}00220\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00221}\mbox{\hyperlink{functions-team-x_8c_a7fba3d1ad089de730311925c9c132049}{00221}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_a7fba3d1ad089de730311925c9c132049}{mostrarMatriz}}(\textcolor{keywordtype}{int}\ matriz[18][18])\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00222}00222\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Matriz\ \%dx\%d:\(\backslash\)n"{}},\ 18,\ 18);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00223}00223\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ 18;\ i++)\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00224}00224\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ j\ =\ 0;\ j\ <\ 18;\ j++)\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00225}00225\ \ \ \ \ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\%4d\ "{}},\ matriz[i][j]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00226}00226\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00227}00227\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00228}00228\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00229}00229\ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00230}\mbox{\hyperlink{functions-team-x_8c_ad671d69bda006e5d8d4af1b3f3d5157a}{00230}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_ad671d69bda006e5d8d4af1b3f3d5157a}{transporMatriz}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ M[18][18],\ \textcolor{keywordtype}{int}\ MT[18][18])\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00231}00231\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00232}00232\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ 18;\ i++)\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00233}00233\ \ \ \ \ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00234}00234\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ j\ =\ 0;\ j\ <\ 18;\ j++)\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00235}00235\ \ \ \ \ \ \ \ \ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00236}00236\ \ \ \ \ \ \ \ \ \ \ \ \ MT[i][j]\ =\ M[j][i];}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00237}00237\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00238}00238\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00239}00239\ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00240}00240\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00241}\mbox{\hyperlink{functions-team-x_8c_a477f749314c6f4e3208a4ecf5a26917d}{00241}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_a477f749314c6f4e3208a4ecf5a26917d}{mostrarMatrizT}}(\textcolor{keywordtype}{int}\ MT[18][18])\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00242}00242\ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ i\ =\ 0;\ i\ <\ 18;\ i++)\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00243}00243\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{for}\ (\textcolor{keywordtype}{int}\ j\ =\ 0;\ j\ <\ 18;\ j++)\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00244}00244\ \ \ \ \ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\%3d\ "{}},\ MT[i][j]);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00245}00245\ \ \ \ \ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00246}00246\ \ \ \ \ \ \ \ \ printf(\textcolor{stringliteral}{"{}\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00247}00247\ \ \ \ \ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00248}00248\ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00249}00249\ }
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00250}\mbox{\hyperlink{functions-team-x_8c_ae7bb133e62112c9458870d235531045b}{00250}}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{functions-team-x_8c_ae7bb133e62112c9458870d235531045b}{mostrarAjuda}}(\textcolor{keywordtype}{void})\ \{}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00251}00251\ \ \ \ \ printf(\textcolor{stringliteral}{"{}===\ AJUDA\ ===\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00252}00252\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Este\ programa\ trabalha\ com\ um\ vetor\ de\ \%d\ numeros\ inteiros\ (-\/1\ a\ 18).\(\backslash\)n\(\backslash\)n"{}},\ 18);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00253}00253\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Regras:\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00254}00254\ \ \ \ \ printf(\textcolor{stringliteral}{"{}-\/\ Introduza\ \%d\ valores\ entre\ -\/1\ e\ 18\ (validacao\ obrigatoria).\(\backslash\)n"{}},\ 18);}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00255}00255\ \ \ \ \ printf(\textcolor{stringliteral}{"{}-\/\ Depois\ escolha\ uma\ opcao\ do\ menu\ para\ executar\ uma\ funcionalidade.\(\backslash\)n\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00256}00256\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Exemplo:\ na\ opcao\ 2,\ o\ programa\ calcula\ a\ raiz\ quadrada\ de\ cada\ valor\ do\ vetor.\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00257}00257\ \ \ \ \ printf(\textcolor{stringliteral}{"{}Nota:\ entradas\ fora\ do\ intervalo\ [-\/1,\ 18]\ serao\ rejeitadas\ e\ pedidas\ novamente.\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00258}00258\ \ \ \ \ printf(\textcolor{stringliteral}{"{}================\(\backslash\)n\(\backslash\)n"{}});}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00259}00259\ \}}
+\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00260}00260\ }
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00261}00261\ }
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00262}00262\ }
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00263}00263\ }
 \DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00264}00264\ }
-\DoxyCodeLine{\Hypertarget{functions-team-x_8c_source_l00265}00265\ }
 
 \end{DoxyCode}
